Fixed issue with the contact section by adding stretch to page wrapper

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -55,7 +55,7 @@ nav a {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: stretch;
   margin: 2% 20% 2% 10%;
 }
 
@@ -74,7 +74,8 @@ nav a {
 
 .page-section h2 {
   flex: 1 0 0;
-  font-size: 200%;
+  font-size: 250%;
+  margin-right: 5px;
   text-align: end;
   color: var(--main-color);
 }
@@ -95,12 +96,13 @@ nav a {
 }
 
 address {
+  height: 150px;
   display: flex;
-  justify-content: space-between;
+  justify-content:space-evenly;
   align-items: center;
 }
 
 address a {
   text-decoration: none;
-  border-bottom: 5px solid var(--main-color);
+  border-bottom: 1px solid var(--main-color);
 }
